# app/readium-backend/src/main/java/com/br/klaus/readium/book/api/dto/BookFilterDTO.java
@@ -2,6 +2,7 @@ package com.br.klaus.readium.book.api.dto;
 
 public record BookFilterDTO(
         String status,
-        String query
+        String query,
+        Long categoryId
 ) {
 }
