# app/readium-backend/src/main/java/com/br/klaus/readium/category/api/dto/CategoryResponseDTO.java
@@ -1,0 +1,10 @@
+package com.br.klaus.readium.category.api.dto;
+
+public record CategoryResponseDTO(
+        Long id,
+        String name,
+        String slug,
+        String color,
+        long booksCount
+) {
+}
