# app/readium-backend/src/main/java/com/br/klaus/readium/category/api/dto/UpdateBookCategoriesRequestDTO.java
@@ -1,0 +1,11 @@
+package com.br.klaus.readium.category.api.dto;
+
+import jakarta.validation.constraints.NotNull;
+
+import java.util.List;
+
+public record UpdateBookCategoriesRequestDTO(
+        @NotNull
+        List<Long> categoryIds
+) {
+}
